Documentacion terminada y agregado de modificacion correcta de mensaje
